--- a/k8s/术语.md
+++ b/k8s/术语.md
@@ -3,6 +3,7 @@ k8s 里面的关键词说明
 - kube-proxy: k8s网关代理
 - kube-controller-manager
 - kube-scheduler
+  - Pod的调度
 - Kubectl : 管理k8s资源对象
 - kubelet
 - Master :k8s集群master节点，管理整个集群
@@ -13,11 +14,22 @@ k8s 里面的关键词说明
 - Annotation :k8s资源抽象的备注
 - Namespace ：命名空间，隔离管理不同资源
 - Replication Controller （RC）
+  - 自动部署容器应用的多份副本
+  - 持续监控并维持副本的数量
 - RplicationSet
 - Deployment
 - Horizontal PodAutoscal町
 - StatefulSet
 - DaemonSet
+  - K8s 1.2版本增加的一种资源对象
+  - 管理集群中每个Node上仅有运行的Pod的副本
 - Volume ： 挂载卷
 - Persistent Volume  永久性挂载卷
-- 
+- Job
+  - 1.2开始批处理类型应用
+- Horizontal Pod Autoscaler(HPA)
+  - 基于CPU使用率进行自动Pod扩缩容
+- clusterIP
+  - 虚拟服务IP地址，集群内部Pod访问，通过node上kube-proxy设置iptables规则转发。
+- ClientIP
+  - 客户端IP地址
