--- a/redis/内存耗尽后.md
+++ b/redis/内存耗尽后.md
@@ -93,12 +93,16 @@ lfu_log_factor 10
 
 #### 访问频次递减算法
 只有8位，迟早会到255，所以但key一段时间不被访问之后，counter需要做减小.
-counter 的减少速度由参数 lfu-decay-time 进行控制，默认是 1，单位是分钟。默认值 1 表示：N 分钟内没有访问，counter 就要减 N。步骤如下：
+counter 的减少速度由参数 `lfu-decay-time` 进行控制，默认是 1，单位是分钟。默认值 1 表示：N 分钟内没有访问，counter 就要减 N。步骤如下：
 
 1. 获取当前时间戳，转化为分钟后取低 16 位（为了方便后续计算，这个值记为 now）。
 2. 取出对象内的 lru 属性中的高 16 位（为了方便后续计算，这个值记为 ldt）。
-3. 当 lru > now 时，默认为过了一个周期（16 位，最大 65535)，则取差值 65535-ldt+now：当 lru <= now 时，取差值 now-ldt（为了方便后续计算，这个差值记为 idle_time）。
-4. 计算N分钟没访问：取出配置文件中的 lfu_decay_time 值，然后计算：idle_time / lfu_decay_time（为了方便后续计算，这个值记为num_periods）。
+3. 取差值`idle_time`
+   1. 当 lru > now 时，默认为过了一个周期（16 位，最大 65535)，则取差值 `65535-ldt+now`：
+   2. 当 lru <= now 时，取差值 `now-ldt`。
+4. 计算`num_periods`分钟没访问：
+   1. 取出配置文件中的 lfu_decay_time 值，
+   2. 计算：idle_time / lfu_decay_time。
 5. 最后将counter减少：counter - num_periods
 
 >取出当前的时间戳和对象中的 lru 属性进行对比，计算出当前多久没有被访问到，比如计算得到的结果是 100 分钟没有被访问，然后再去除配置参数 lfu_decay_time，如果这个配置默认为 1也即是 100/1=100，代表 100 分钟没访问，所以 counter 就减少 100。
