--- a/k8s/网络模型.md
+++ b/k8s/网络模型.md
@@ -5,3 +5,33 @@
 - 抽象到Pod到Pod之间的通信
 - Pod到Service之间的通信
 - 集群外部与内部组件之间的通信
+
+### 容器到容器之间直连
+由于Pod内的容器共享同一个网络命名空间，共享同一个Linux协议栈，跟在同一台机器一样，和docker0同一网段。可以使用：
+- localhost:port访问彼此
+- 使用Linux本地IPC进行通信
+
+### 抽象到Pod到Pod之间的通信
+Pod拥有一个全局真实存在的虚拟IP地址。Pod与Pod之间的访问分两种：
+- 同一个Node节点下的访问：
+  - 直接采取IP地址通信：Pod通过Veth连接到同一个docker0网桥上
+- 不同Node的访问：
+  - 原理：
+    - 通过映射Node和Pod的IP地址，得到目标Node Ip地址,
+    - 发送数据到目标Node IP,数据发送到达宿主机后，由docker0负责转发到目标Pod上。
+  - 需要解决问题：
+    - 集群Pod的IP分配规划，做到不能冲突
+    - 关联Node和Pod的Ip
+  - 解决方案：
+    - Flannel
+
+### Pod到Service之间的通信
+网络层上看k8s就是一台路由器；k8s网络模型中，每台节点上的docker0网桥都可以被路由到，所以外面网络可以直接访问到节点上面的Pod，并不需要做物理主机端口映射，因此在部署时：
+- 都将Node 的docker0网桥IP作为它默认的网关
+
+#### k8s Pod端口映射
+k8s 会在用镜像为`google_containers/pause:latest`的容器，并挂载到业务服务容器上来映射端口，共享一个网络堆栈，简化Pod内多个容器的端口映射过程;外面流量数据都是进入Pasuse容器。所以Pasuse容器只是负责接管Pod的Endpoint。
+
+#### Server与Pod的通信
+
+### 集群外部与内部组件之间的通信-CNI网络模型
