修改错别字

--- a/mysql/InnoDB/体系架构.md
+++ b/mysql/InnoDB/体系架构.md
@@ -8,6 +8,7 @@ InnoDB存储引擎，mysql5.5版本开始默认作为表存储引擎，是第一
 ## 体系架构
 
 ![](../../assets/mysql/innDB.jpg)
+
 InnDB存储引擎有多个内存块，组成内存池，其主要工作：
 - 维护所有进程/线程需要访问的多个内部数据结构
 - 缓存磁盘上的数据，方便快速地读取，同时缓存对在磁盘文件修改之前的数据
@@ -131,7 +132,7 @@ Checkpoint类型：
     - Dirty Page too much Checkpoint
 
 ### Write Ahead Log 策略
-当事务提交时，先写重做日志，在修改页，达到持久性(D)的要求，避免数据丢失
+当事务提交时，先写重做日志，再修改页，达到持久性(D)的要求，避免数据丢失
 
 ### LSN策略
 页使用LSN(Log Sequence Number)来标志版本，本身是8字节的数字。
