--- a/mysql/InnoDB/体系架构.md
+++ b/mysql/InnoDB/体系架构.md
@@ -39,7 +39,7 @@ InnDB存储引擎有多个内存块，组成内存池，其主要工作：
 - Page Cleaner Thread
   - 1.2之后引入，作用对脏页刷新操作，减轻Master Thread工作，以及用户查询线程的阻塞
 
-## 内存
+## 内存管理
 InnoDB存储引擎是基于磁盘存储，并将记录按页的方式进行管理，利用缓冲池技术提高数据库性能。
 - 页FIX操作：从磁盘读取到页存储到缓冲池中，下次直接从缓冲池读取
 - Checkpoint机制：数据库页修改操作，先修改缓冲池中页，然后以一定频率刷新到磁盘上
