--- a/nginx/基础概念.md
+++ b/nginx/基础概念.md
@@ -1,7 +1,7 @@
-## connection
+# connection
 nginx中connection就是对tcp连接的封装，其中包括连接的socket，读事件，写事件.
 
-
+## 连接
 ### 如何处理一个连接
 - 结合tcp连接的生命周期
     - nginx在启动时，解析配置文件，得到监听端口和ip地址
@@ -42,7 +42,7 @@ worker_connections * （worker_processes/2）
 - 只有获得accept_mutex互斥量的进程才能添加accept
 - nginx使用一个叫ngx_accept_disabled的变量来控制是否去竞争accept_mutex锁
 
-#### 计算ngx_accept_disabled伪代码
+### 计算ngx_accept_disabled伪代码
 
 - 计算ngx_accept_disabled的值,nginx单进程的所有连接总数的八分之一，减去剩下的空闲连接数量
 - 当剩余连接数小于总连接数的八分之一时，其值才大于0，而且剩余的连接数越小，这个值越大。
@@ -92,7 +92,7 @@ if (ngx_accept_disabled > 0) {
 - 完成request的处理
 - 重新初始化定时器及其他的事件
 
-### request请求的处理流程
+#### request请求的处理流程
 
 - 初始化HTTP Request（读取来自客户端的数据，生成HTTP Request对象，该对象含有该请求所有的信息）。
 - 处理请求头。
@@ -102,7 +102,7 @@ if (ngx_accept_disabled > 0) {
 
 #### request请求的处理详细层面
 nginx把http请求封装在结构体**ngx_http_request_t**；通过ngx_http_request_t保存解析请求并输出相应数据
-    ![8e933143f964bbe3cbbbf74458ecbbc6.png](evernotecid://2B0A12FB-E62F-416E-8574-4CB5888E1A40/appyinxiangcom/20623507/ENResource/p41)
+![](../assets/nginx/chapter-2-2.png)
 
 * 请求在ngx_http_init_request函数开始
 * 设置读事件为**ngx_http_process_request_line**，处理请求行
