--- a/nginx/请求11个阶段.md
+++ b/nginx/请求11个阶段.md
@@ -1,29 +1,27 @@
 # Nginx请求的11个处理阶段
-Nginx 模块提供的配置指令一般只会注册并运行在其中的某一阶段。这种插入式处理，即可插拔式架构
+Nginx 模块提供的配置指令一般只会注册并运行在其中的某一阶段。这种插入式处理，即可插拔式架构,nginx执行时有11个阶段
 
-## 11个处理阶段
-
-### post-read
+## post-read
 Nginx 读取并解析完请求头`request headers` 之后立即开始运行
 
-#### 指令
+### 指令
 - ngx_realip模块的
     - set_real_ip_from
     - real_ip_header
 
-### server-rewrite
+## server-rewrite
 在post-read之后，所以 server 配置块中的 `set` 指令也就总是运行在 `ngx_realip` 模块改写请求的来源地址之后。
 - 期间运行的指令
     - server 块的 set
 
-### find-config
+## find-config
 `完成当前请求与location的匹配`
 这个阶段并不支持 Nginx 模块注册处理程序，而是由` Nginx 核心来完成当前请求与 location 配置块之间的配对工作`
 
-### rewrite
+## rewrite
 此阶段开始时，location 配置块中的指令便可以产生作用,其他模块，或者第三方模块可以将自己的配置注入进来执行
 
-#### 运行的指令
+### 运行的指令
 - ngx_set_misc模块的`set_unescape_uri`
 - set
 - set_by_lua
@@ -34,22 +32,22 @@ Nginx 读取并解析完请求头`request headers` 之后立即开始运行
 - ngx_lua提供的`rewrite_by_lua`
     `rewrite 阶段的末尾`执行
 
-### post-rewrite
+## post-rewrite
 不接受 Nginx 模块注册处理程序，而是由 Nginx 核心完成 rewrite 阶段所要求的“内部跳转”操作
 
-### preaccess
+## preaccess
 标准模块`ngx_limit_req` 和 `ngx_limit_zone` 就运行在此阶段，前者可以控制请求的访问频度，而后者可以限制访问的并发度。
 
-### access
+## access
 该阶段配置指令多是执行访问控制性质任务
 标准模块 `ngx_access`、`第三方模块 ngx_auth_request` 以及第三方模块 `ngx_lua 的 access_by_lua` 指令就运行在这个阶段。
 
-#### 阶段能运行的指令
+### 阶段能运行的指令
 - 第三方模块 `ngx_auth_request`
 - ngx_access 提供的`allow` 和`deny` 控制可以访问的IP地址
 - ngx_lua模块提供`access_by_lua` 用于在 access 请求处理阶段的**末尾**插入用户 Lua 代码
 
-### post-access
+## post-access
 不支持 Nginx 模块注册处理程序，而是由 Nginx 核心处理完成。
 `post-access 阶段主要用于配合 access 阶段实现标准 ngx_http_core 模块提供的配置指令 satisfy 的功能`。
 
@@ -63,27 +61,28 @@ satisfy 配置指令可以用于控制它们彼此之间的协作方式。
 
 第二种方式则被称为 any 方式（或者说“或关系”）。默认情况下，Nginx 使用的是 all 方式。
 
-### try-files
+## try-files
 这个阶段专门用于实现标准配置指令 `try_files` 的功能，并不支持 Nginx 模块注册处理程序.
 
-#### 工作原理
+### 工作原理
 `try_files` 指令接受两个以上任意数量的参数，每个参数都指定了一个 URI. 这里假设配置了 N 个参数，则 Nginx 会在 try-files 阶段，依次把前 N-1 个参数映射为文件系统上的对象（文件或者目录），然后检查这些对象是否存在。一旦 Nginx 发现某个文件系统对象存在，就会在 try-files 阶段把当前请求的 URI 改写为该对象所对应的参数 URI（但不会包含末尾的斜杠字符，也不会发生 “内部跳转”）。
 
 如果前 N-1 个参数所对应的文件系统对象都不存在，try-files 阶段就会立即发起“内部跳转”到最后一个参数（即第 N 个参数）所指定的 URI.通过 root 配置指令所指定的“文档根目录”进行映射.
 
 例如，当“文档根目录”是 /var/www/ 的时候，请求 URI /foo/bar 会被映射为文件 /var/www/foo/bar，而请求 URI /foo/baz/ 则会被映射为目录 /var/www/foo/baz/. 注意这里是如何通过 URI 末尾的斜杠字符是否存在来区分“目录”和“文件”的。
-### content
+
+## content
 这个阶段的配置指令一般都肩负着生成“内容”（content）并输出 HTTP 响应的使命.
 绝大多数 Nginx 模块在向 content 阶段注册配置指令时，本质上是在当前的 location 配置块中注册所谓的“内容处理程序”（content handler）。
 
 每一个 location 只能有一个“内容处理程序”，因此，当在 location 中同时使用多个模块的 content 阶段指令时，`只有其中一个模块能成功注册“内容处理程序”`。 也就是说，**多个不同是输出指令，只能只有一个输出，且具体哪个模块输出是不确定的**
 
-#### 并非所有模块的指令都支持在同一个 location 中被使用多次,否则会报错
+并非所有模块的指令都支持在同一个 location 中被使用多次,否则会报错：
 - 多个 content_by_lua
 - proxy_pass 和 echo
     - 代替方案 echo_before_body 和 echo_after_body 代替echo
 
-#### location中在content阶段谁来输出内容
+### location中在content阶段谁来输出内容
 当存在“内容处理程序”时，这些静态资源服务模块并不会起作用；反之，请求的处理权就会自动落到这些模块上。
 
 - 静态资源服务模块
@@ -98,13 +97,14 @@ satisfy 配置指令可以用于控制它们彼此之间的协作方式。
  `ngx_static` 则刚好相反. content阶段默认垫底执行。一个网站的静态资源，包括静态 .html 文件、静态 .css 文件、静态 .js 文件、以及静态图片文件等等，全部可以通过这个模块对外服务。
  
  
-#### 运行的指令
+### 运行的指令
 - echo
 - echo_exec
 - proxy_pass
 - echo_location
 - content_by_lua
-### log
+
+## log
 log阶段处理，比如记录访问量/统计平均响应时间。log_by_lua
 
 
