不定期更新

--- a/golang/内存分配.md
+++ b/golang/内存分配.md
@@ -1,19 +1,67 @@
 
-// The allocator's data structures are:
-//
-//	fixalloc: a free-list allocator for fixed-size off-heap objects,
-//		used to manage storage used by the allocator.
-//	mheap: the malloc heap, managed at page (8192-byte) granularity.
-//	mspan: a run of in-use pages managed by the mheap.
-//	mcentral: collects all spans of a given size class.
-//	mcache: a per-P cache of mspans with free space.
-//	mstats: allocation statistics.
 ## 分配结构说明
 - fixalloc
-- mheap
-- mcentral
-- mcache
+- mheap：管理mcentral,大对象直接分配，申请page
+  - span的page数量管理
+    - free：free中保存的span是空闲并且非垃圾回收的span。
+    - scav：scav中保存的是空闲并且已经垃圾回收的span。
+  - arenas：一组heapArena组成
+    - heapArena：每一个heapArena都包含了连续的pagesPerArena个span，这个主要是为mheap管理span和垃圾回收服务
+  - mcentral：存在mheap结构内，向mcache提供span，没有时向mheap申请；申请时需要加锁
+    - 按span class 管理,除了0级别的不用，共67个
+    - nonempty mspanList
+    - empty mspanList
+  - bitmap：用来管理内存页，并在每个P中维护一份page cache：
+  - redix树：管理线性的地址空间的位图结构
+    - 用于分配的page过大，P上的cache中没有可用的page时，对mheap加锁，并在整个mheap管理的虚拟地址空间的位图中查找是否有可用的pages。
+    - pallocSum：树的节点，简单uint64类型，分成三部分，代表该区连续空闲page的信息：
+      - start： 开头部分，21位，
+      - max：中间部分，22位；位于顶层；代表完整的redix树最多代表$2^21$pages = 16G内存
+      - end：尾部，21位；
+    - searchAddr：用于优化查找；在searchAddr地址之前一定是已经分配过的
+      - chunk：位图，查找是否有对应大小的连续空间；针对较小内存分配使用，
+        - pallocData：管理分配位图，被pageAlloc结构管理
+          - pallocBits：uint64，大小为8的数组，每一位对应一个page，共对应64*8=512KB,一个chunk的大小
+- mcache：被P拥有，直接分配<32kb的对象，无锁
+  - Tiny：分配[8b,16kb)的小对象
+- mspan：用于分配内存span
+  - allocCache:位图，用于比较span元素大小，uint64,最多能缓存64位大小；从后往前的方式与span中元素对应起来，为1表示被使用
+  - freeindex：标记当前span中元素被分配到哪里
 - mstats
+- page ：内存申请单位
+- size class ： 对对象大小划分区域，共67个
+- span class： 与size class 做对应，2个span class 对应1个size class ，一个存放不含指针对象，一个存储指针对象，元素是链表管理；共134个；
+  - nonempty链表
+  - empty链表
+- span：内存管理单位；连续的page组成1个Span，有134个分类；
+- pageCache：缓存mheapde bitmap；
+  - base：指针字段，虚拟内存基地址
+  - cache：位图，其每一位都代表了一个page(8 KB) 因此，由于cache为uint64类型，其一共可以存储64*8=512KB的缓存。1表示未分配，0表示分配
+  - scav：
+  - 操作步骤：
+    - mheap会首先查找在每个逻辑处理器P中pageCache字段的cache；
+    - 当需要分配的页数小于 512/4=128KB时，需要首先从cache中分配
+
+## redix树查找满足的连续空闲空间
+在查找基数树的过程中，从上到下，从左到右的查找每一个节点是否符合要求。
+- pallocSum字段的开头start有多少连续的内存空间；start>npages时，说明找到了可用地址和空间
+- 如果没有找到，则计算max;如果max>npages，则继续在当前节点找对应下一级，查找到具体地址；
+- 如果max < npages;则，查看start+end>npages；满足则合并吧起来使用
+
+每一次从基数树中查找到内存，或者事后从操作系统分配内存的时候，都需要更新基数树中每一个节点的pallocSum。
+
+当在基数树都查找不到可用的连续内存时，就需要从操作系统中索取内存。例如unix体系的使用mmap申请
+
+## 对象&内存块管理
+- 三级对象管理
+  - mcache
+  - mcentral
+  - mheap
+- 四级虚拟内存线性地址空间管理
+  - HeapArea：64M
+  - chunk：512*8Kb 最底层叶子节点内；存在pallocSum中；
+  - span：连续page组成
+  - page：8Kb
 
 ### 分配小对象流程
 1. 大小向上取整匹配合适的size classes ，然后在当前的P mcache上的mspan查找对于的size class，
@@ -108,6 +156,12 @@ heapAddrBits，heapArenaBytes,arena map maps （L1，L2） 大小之间的关系
 - Reserved
 - Prepared
 - Ready
+
+## 与TCMalloc不同
+- cache对span的管理
+- 内存分类
+  - golang 无大小中对象，小对象[1b,16b)使用Tiny对象分配；[16,32)在cache上分配，大于32在mheap上分配这点相同
+- mheap对span的组织；TCMalloc是按链表，golang是按redix树
 
 # Ariticle
 - [Thread-Caching Malloc](http://goog-perftools.sourceforge.net/doc/tcmalloc.html)
