--- a/nginx/请求11个阶段.md
+++ b/nginx/请求11个阶段.md
@@ -10,16 +10,15 @@ Nginx 读取并解析完请求头`request headers` 之后立即开始运行
     - real_ip_header
 
 ## server-rewrite
-在post-read之后，所以 server 配置块中的 `set` 指令也就总是运行在 `ngx_realip` 模块改写请求的来源地址之后。
+在post-read之后，修改URI阶段；所以 server 配置块中的 `set` 指令也就总是运行在 `ngx_realip` 模块改写请求的来源地址之后。
 - 期间运行的指令
     - server 块的 set
 
 ## find-config
-`完成当前请求与location的匹配`
 这个阶段并不支持 Nginx 模块注册处理程序，而是由` Nginx 核心来完成当前请求与 location 配置块之间的配对工作`
 
 ## rewrite
-此阶段开始时，location 配置块中的指令便可以产生作用,其他模块，或者第三方模块可以将自己的配置注入进来执行
+找都location后在这里有修改URI,,此阶段开始时，location 配置块中的指令便可以产生作用,其他模块，或者第三方模块可以将自己的配置注入进来执行
 
 ### 运行的指令
 - ngx_set_misc模块的`set_unescape_uri`
@@ -33,12 +32,14 @@ Nginx 读取并解析完请求头`request headers` 之后立即开始运行
     `rewrite 阶段的末尾`执行
 
 ## post-rewrite
-不接受 Nginx 模块注册处理程序，而是由 Nginx 核心完成 rewrite 阶段所要求的“内部跳转”操作
+不接受 Nginx 模块注册处理程序，而是由 Nginx 核心完成 rewrite 阶段所要求的“内部跳转”操作,防止冲泻URL后出现死循环。
 
 ## preaccess
+为下阶段access 做准备；
 标准模块`ngx_limit_req` 和 `ngx_limit_zone` 就运行在此阶段，前者可以控制请求的访问频度，而后者可以限制访问的并发度。
 
 ## access
+让HTTP模块判断是否允许这个请求进入Nginx服务器。
 该阶段配置指令多是执行访问控制性质任务
 标准模块 `ngx_access`、`第三方模块 ngx_auth_request` 以及第三方模块 `ngx_lua 的 access_by_lua` 指令就运行在这个阶段。
 
@@ -62,7 +63,7 @@ satisfy 配置指令可以用于控制它们彼此之间的协作方式。
 第二种方式则被称为 any 方式（或者说“或关系”）。默认情况下，Nginx 使用的是 all 方式。
 
 ## try-files
-这个阶段专门用于实现标准配置指令 `try_files` 的功能，并不支持 Nginx 模块注册处理程序.
+这个阶段专门用于实现标准配置指令 `try_files` 的功能，并不支持 Nginx 模块注册处理程序.为访问静态文件资源而设置
 
 ### 工作原理
 `try_files` 指令接受两个以上任意数量的参数，每个参数都指定了一个 URI. 这里假设配置了 N 个参数，则 Nginx 会在 try-files 阶段，依次把前 N-1 个参数映射为文件系统上的对象（文件或者目录），然后检查这些对象是否存在。一旦 Nginx 发现某个文件系统对象存在，就会在 try-files 阶段把当前请求的 URI 改写为该对象所对应的参数 URI（但不会包含末尾的斜杠字符，也不会发生 “内部跳转”）。
