--- a/NoSQL/Mongo/文档.md
+++ b/NoSQL/Mongo/文档.md
@@ -97,6 +97,14 @@ db.users.find(<query>).explain()
 - millis：当前查询所需时间，毫秒数。
 - indexBounds：当前查询具体使用的索引。
 
+### 访问子集元素
+```
+父元素.子集元素key
+```
+
+### 元素魔术键&方法
+- 数组大小`$size`
+
 ## 插入
 ```
 - 1  若插入的数据主键已经存在，则会抛 org.springframework.dao.DuplicateKeyException 异常，提示主键重复，不保存当前数据
