--- a/mysql/存储过程/存储过程.md
+++ b/mysql/存储过程/存储过程.md
@@ -14,7 +14,7 @@ CREATE
 　PROCEDURE sp_name ([proc_parameter[,...]])
     [characteristic ...] routine_body
 
-// 定义参数：[输入｜输出｜输入输出] 名字 类型
+// 定义参数：[输入，可改变｜输出,可改变，放回｜输入输出,并且可被改变和返回] 名字 类型
 proc_parameter:
     [ IN | OUT | INOUT ] param_name type
  
@@ -32,4 +32,196 @@ routine_body:
 　　[statement_list]
 　　　　……
 END [end_label]
+```
+
+## 存储函数创建语句
+```
+create function 存储函数名(参数)
+```
+## 定义输入，输出，输入输出变量
+- 输入：`in variable_name datatype`
+- 输出： `out variable_name datatype`
+- 输入输出：`inout variable_name datatype`
+
+
+## 局部变量申明
+```
+DECLARE variable_name [,variable_name...] datatype [DEFAULT value];
+```
+
+## 变量赋值
+```
+SET @变量名 = 表达式值 [,variable_name = expression ...]
+```
+
+## 查看数据库存储过程信息
+```
+-- 1 列表
+select name from mysql.proc where db=’数据库名’;
+
+-- 2 列表
+select routine_name from information_schema.routines where routine_schema='数据库名';
+
+-- 3 列表
+show procedure status where db="db1"
+
+-- 4 详情
+SHOW CREATE PROCEDURE 数据库.存储过程名;
+```
+
+## 修改存储过程
+```
+ALTER PROCEDURE 
+    [DEFINER = { user | CURRENT_USER }]
+　PROCEDURE sp_name ([proc_parameter[,...]])
+    [characteristic ...] routine_body
+```
+
+## 删除存储过程
+```
+DROP PROCEDURE 数据库.存储过程名;
+```
+
+## 控制语句
+### 变量域
+`begin .... end` 语句块下就是一个作用域；在其内部定义的变量，在外面则不可见；
+```
+CREATE PROCEDURE proc3()
+    begin
+        declare x1 varchar(5) default 'outer';
+        begin
+            declare x2 varchar(5) default 'inter';
+            select x1;
+        end;
+        select x1;
+    end;
+
+```
+
+### 条件语句
+#### if-then-else
+`if exper then routine_body else routine_body end if;` 
+
+```
+mysql > CREATE PROCEDURE proc2(IN parameter int)  
+     -> begin 
+     -> declare var int;  
+     -> set var=parameter+1;  
+     -> if var=0 then 
+     -> insert into t values(17);  
+     -> end if;  
+     -> if parameter=0 then 
+     -> update t set s1=s1+1;  
+     -> else 
+     -> update t set s1=s1+2;  
+     -> end if;  
+     -> end;  
+     -> //  
+```
+
+#### case
+`case [variable_name] when value then routine_body [when value then routine_body ...]  else routine_body end case;`
+```
+mysql > DELIMITER //  
+mysql > CREATE PROCEDURE proc3 (in parameter int)  
+     -> begin 
+     -> declare var int;  
+     -> set var=parameter+1;  
+     -> case var  
+     -> when 0 then   
+     -> insert into t values(17);  
+     -> when 1 then   
+     -> insert into t values(18);  
+     -> else   
+     -> insert into t values(19);  
+     -> end case;  
+     -> end;  
+     -> //  
+mysql > DELIMITER ; 
+case
+    when var=0 then
+        insert into t values(30);
+    when var>0 then
+    when var<0 then
+    else
+end case
+```
+
+#### while-end while
+执行前进行检查
+`while exper do routine_body end while`
+
+```
+mysql > CREATE PROCEDURE proc4()  
+     -> begin 
+     -> declare var int;  
+     -> set var=0;  
+     -> while var<6 do  
+     -> insert into t values(var);  
+     -> set var=var+1;  
+     -> end while;  
+     -> end;  
+     -> // 
+```
+
+#### repeat-end repeat
+执行操作后检查结果
+
+`repeat routine_body until exper end repeat`
+
+```
+mysql > CREATE PROCEDURE proc5 ()  
+     -> begin   
+     -> declare v int;  
+     -> set v=0;  
+     -> repeat  
+     -> insert into t values(v);  
+     -> set v=v+1;  
+     -> until v>=5  
+     -> end repeat;  
+     -> end;  
+     -> //  
+```
+
+#### loop-end loop
+不需要初始条件,不需要结束条件,leave语句就离开循环体
+
+```
+mysql > CREATE PROCEDURE proc6 ()  
+     -> begin 
+     -> declare v int;  
+     -> set v=0;  
+     -> LOOP_LABLE:loop  
+     -> insert into t values(v);  
+     -> set v=v+1;  
+     -> if v >=5 then 
+     -> leave LOOP_LABLE;  
+     -> end if;  
+     -> end loop;  
+     -> end;  
+     -> //  
+```
+
+## LABLES 标号
+用在 begin repeat while 或者 loop 语句前，语句标号只能在合法的语句前面使用;可以跳出循环，法的语句前面使用。可以跳出循环；类似goto tag 的用法
+
+## Iterate迭代
+```
+mysql > CREATE PROCEDURE proc10 ()  
+     -> begin 
+     -> declare v int;  
+     -> set v=0;  
+     -> LOOP_LABLE:loop  
+     -> if v=3 then   
+     -> set v=v+1;  
+     -> ITERATE LOOP_LABLE;  
+     -> end if;  
+     -> insert into t values(v);  
+     -> set v=v+1;  
+     -> if v>=5 then 
+     -> leave LOOP_LABLE;  
+     -> end if;  
+     -> end loop;  
+     -> end;  
+     -> // 
 ```
